# vantage-draft-assistant

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  build-exe.bat  index.html  package-lock.json  package.json  vite.config.ts  СБОРКА-EXE.md
.github/workflows/: ci.yml  release.yml
docs/: RIOT_API_KEY.md
docs/screenshots/: README.md
docs/screenshots/api/: README.md
public/: patch-notes.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: champion_snapshot.json
src-tauri/src/: archetypes.rs  crawler.rs  db.rs  ddragon.rs  lcu.rs  main.rs  match_detail.rs  paths.rs  profile.rs  rate_limit.rs  recommend.rs  riot_api.rs
src/api/: championApi.ts  championCatalog.ts  crawlerApi.ts  draftApi.ts  draftLiveApi.ts  masteryApi.ts  matchDetailApi.ts  metaTierApi.ts  patchApi.ts  profileApi.ts  recommendApi.ts  runeCatalog.ts  scoutApi.ts  statsApi.ts
src/components/: AnalyticsSummary.tsx  AppShell.css  AppShell.tsx  DraftView.tsx  Minimap.css  Minimap.tsx  RecommendationsPanel.tsx  icons.tsx  patch.css  patch.tsx  patchContext.ts  rail.ts
src/domain/: draft.ts
src/i18n/: index.ts
src/mocks/: draftMock.ts
src/theme/: tokens.css
src/utils/: riotId.ts  roles.ts  windowOverlay.ts
src/views/: ChampionPage.css  ChampionPage.tsx  Crawler.tsx  CurrentMatch.tsx  DraftAssistant.tsx  DraftScreen.tsx  LiveDraftPicks.tsx  MatchBreakdown.css  MatchBreakdown.tsx  MetaTierList.css  MetaTierList.tsx  PickHelper.css  PickHelper.tsx  Profile.css  Profile.tsx  Scout.tsx  Settings.tsx
(+28 files in other folders)
